working different users, my books page and search bar. Book editing and delte also works, images questionable

--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "knjige",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "bcryptjs": "^3.0.2",
-    "mongoose": "^8.19.2",
-    "next": "16.0.1",
-    "next-auth": "^4.24.13",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+	"name": "knjige",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "eslint",
+		"seed": "tsx --env-file=.env.local scripts/seedUsers.ts",
+		"seed:books": "tsx --env-file=.env.local scripts/seedBooks.ts",
+		"seed:borrow": "tsx --env-file=.env.local scripts/updateBorrowData.ts"
+	},
+	"dependencies": {
+		"@types/bcryptjs": "^2.4.6",
+		"bcryptjs": "^3.0.2",
+		"dotenv": "^17.2.3",
+		"mongoose": "^8.19.2",
+		"next": "16.0.1",
+		"next-auth": "^4.24.13",
+		"react": "19.2.0",
+		"react-dom": "19.2.0"
+	},
+	"devDependencies": {
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "16.0.1",
+		"tailwindcss": "^4",
+		"tsx": "^4.20.6",
+		"typescript": "^5"
+	}
 }
